# pg_emd

./: .gitignore  Cargo.toml  README.md  demo.sql  pg_emd.control
benches/: optimization_verify.rs  tree_embedding.rs
examples/: basic_usage.rs  emd_usage.rs
sql/: pg_emd--0.1.0.sql
src/: dynamic.rs  emd.rs  emd_1d.rs  hashing.rs  lib.rs  metric.rs  pg_extension.rs  tree_embedding.rs
tests/: complexity_proof.rs  emd_correctness.rs  emd_properties.rs  integration_tests.rs  optimization_tests.rs  paper_bounds.rs  performance.rs  tree_embedding.rs
