[package]
name = "pg_emd"
version = "0.1.0"
edition = "2021"
description = "Fast approximate Earth Mover's Distance using dynamic tree embeddings"
repository = "https://github.com/xizhao/pg_emd"
keywords = ["earth-movers-distance", "emd", "tree-embedding", "postgres", "metric"]
categories = ["algorithms", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable PostgreSQL extension (requires: cargo install cargo-pgrx && cargo pgrx init):
# default = ["pg17"]
pg12 = ["pgrx/pg12"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
rand = "0.8"
ordered-float = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pgrx = { version = "=0.12.8", optional = true }

[dev-dependencies]
criterion = "0.5"

[target.'cfg(any(feature = "pg12", feature = "pg13", feature = "pg14", feature = "pg15", feature = "pg16", feature = "pg17"))'.dev-dependencies]
pgrx-tests = "=0.12.8"

[[bench]]
name = "tree_embedding"
harness = false

[[bench]]
name = "optimization_verify"
harness = false
