[package]
name = "pg_emd"
version = "0.1.0"
edition = "2021"
description = "Fast approximate Earth Mover's Distance using dynamic tree embeddings"
repository = "https://github.com/xizhao/pg_emd"
keywords = ["earth-movers-distance", "emd", "tree-embedding", "postgres", "metric"]
categories = ["algorithms", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17"]

[dependencies]
rand = "0.8"
ordered-float = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pgrx = { version = "0.16.1", optional = true }

[dev-dependencies]
criterion = "0.5"

[target.'cfg(feature = "pg17")'.dev-dependencies]
pgrx-tests = "0.16.1"

[[bench]]
name = "tree_embedding"
harness = false

[[bench]]
name = "optimization_verify"
harness = false
